# Web_hw8

./: pyproject.toml
part 1/: add_data.py  db_models.py  main.py
part 2/: Mongo_connect.py  db_models.py  email_consumer.py  producer.py  rabbit_conect.py  sms_consumer.py
